--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Advanced Black Hole Simulation</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <script src="script.js"></script>
+</head>
+<body>
+  <h1>Advanced Black Hole Simulation</h1>
+  <div id="canvas-container"></div>
+  <button id="add-star">Add Star</button>
+  <button id="add-galaxy">Add Galaxy</button>
+</body>
+</html>
